<resources>
    <string name="app_name">vision Of Man "The Geeta"</string>
    <string name="OpenDrawer">open navigation drawer</string>
    <string name="closeDrawer">close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_krishnadevotees">Krishna Devotees</string>
    <string name="title_krishnadevoteesemail">krishnadevotees18700@gmail.com</string>
    <string name="title_chapters">Chapters </string>
    <string name="title_languages">Languages </string>
    <string name="title_vom">Vison Of Man  </string>
    <string name="title_verse">Verse </string>
    <string name="title_hindi">Hindi </string>
    <string name="title_gujarati">Gujarati </string>
    <string name="title_english">English </string>
    <string name="title_marathi">Marathi </string>
    <string name="title_punjabi">Punjabi </string>
    <string name="title_tamil">Tamil </string>
    <string name="title_telugu">Telugu </string>
    <string name="title_kannada">Kannada </string>
    <string name="title_malayalam">Malayalam </string>
    <string name="title_bangla">Bangla </string>
    <string name="cancle">Cancle</string>
    <string name="ok">Ok</string>
    <string name="selectadhyay">Select Adhyay</string>
    <string name="selectsloka">Select Sloka</string>
    <string name="update">Update</string>
    <string name="title_chooselanguage">Choose Language </string>


    <string name="menu_home">Home</string>
    <string name="menu_chapter">Chapters</string>
    <string name="menu_languages">Languages</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="spinner">spinner</string>
    <string name="update_profile">Update Profile</string>
    <string name="browse_image">Browse Image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
    <string name="brawse">brawse</string>
    <string name="fav_btn">favorite</string>
    <string name="language_change_warning">Please remove verse from favorites again after changing the language.</string>
    <string name="nav_host">Navigation Host</string>
    <string name="email_hint">Email</string>
    <string name="home_title">महापुरुषों के श्रीमद् भगवदगीता के विषय में \n जानने योग्य विचार</string>
    <string name="sk"> गीता मे हृदयं पार्थ गीता मे सारमुत्तमम् । \n \tगीता मे ज्ञानमत्युग्रं गीता मे ज्ञानमव्ययम् ।। \n \tगीता मे चोत्तमं स्थानं गीता मे परमं पदम् । \n \tगीता मे परमं गुह्यं गीता मे परमो गुरुः ।। \n\nगीता मेरा हृदय है। गीता मेरा उत्तम सार है। \n \tगीता मेरा अति उग्र ज्ञान है।  \n \tगीता मेरा अविनाशी ज्ञान है| \n \tगीता मेरा श्रेष्ठ निवासस्थान है। गीता मेरा परम पद है।  \n \tगीता मेरा परम रहस्य है। गीता मेरा परम गुरु है। \n\n\n - भगवान श्री कृष्ण</string>
    <string name="krishna">- भगवान श्री कृष्ण</string>
    <string name="mv">गीता सुगीता कर्तव्या किमन्यैः शास्त्रविस्तरैः । \nया स्वयं पद्मनाभस्य मुखपद्माद्विनिःसृता ।।\n \nजो अपने आप श्रीविष्णु भगवान के मुखकमल से निकली हुई है वह गीता अच्छी तरह कण्ठस्थ करना चाहिए । अन्य शास्त्रों के विस्तार से क्या लाभ? \n\n\n -महर्षि व्यास</string>
    <string name="sc">यं गीतानामसहस्रं ध्येयं श्रीपतिरूपमजस्रम् । \nनेयं सज्जनसंगे चित्तं देयं दीनजनाय च वित्तम ।। \n\nगाने योग्य गीता तो श्री गीता का और श्री विष्णुसहस्रनाम का गान है। धरने योग्य तो श्री विष्णु भगवान का ध्यान है। चित्त तो सज्जनों के संग पिरोने योग्य है और वित्त तो दीन-दुखियों को देने योग्य है। \n\n\n- श्रीमद् आद्य शंकराचार्य</string>
    <string name="sv">\'श्रीमद् भगवदगीता\' उपनिषदरूपी बगीचों में से चुने हुए आध्यात्मिक सत्यरूपी पुष्पों से गुँथा हुआ पुष्पगुच्छ है ।  \n\n- स्वामी विवेकानन्द</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="verse_of_the_day">Verse Of The Day</string>
    <string name="favorites">Favorites</string>
    <string name="tell_your_friends">Tell Your Friends</string>
    <string name="share">Share</string>
    <string name="about_us_content">

Welcome to our Vision Of Man (Bhagavad Gita) application, where we aim to provide a digital platform for users to access and learn about the teachings of the Bhagavad Gita. Our application is designed to help users understand the spiritual and practical aspects of the Bhagavad Gita teachings and apply them in their daily lives.\n

Our team consists of experienced professionals with a passion for spreading the knowledge and wisdom of the Bhagavad Gita. We are committed to providing users with high-quality content that is authentic, accurate, and easy to understand.\n

The Bhagavad Gita is a sacred Hindu scripture that has been passed down through generations for thousands of years. It contains teachings on various aspects of life, including spirituality, ethics, and morality. Our mission is to make these teachings accessible to people all over the world and help them lead a more fulfilling and peaceful life.\m

We believe in the values of integrity, authenticity, and compassion. Our goal is to create a positive impact on society by promoting the teachings of the Bhagavad Gita and helping people live a life of purpose and meaning.\n

Thank you for choosing our Bhagavad Gita application. We hope that you find it helpful in your spiritual journey. If you have any questions or feedback, please feel free to contact us.</string>
    <string name="contact_us_content">If you have any questions, feedback, or concerns, please don\'t hesitate to contact us. We are always here to help you.

Email: krishnadevotees@gmail.com


You can also connect with us on social media:

Facebook: @vision_of_man
Twitter: @vision_of_man
Instagram: @vision_of_man

Thank you for using our Bhagavad Gita application. We appreciate your support and look forward to hearing from you.</string>
    <string name="aboutus_1">Welcome to our Vision Of Man application, where we aim to provide a digital platform for users to access and learn about the teachings of the Bhagavad Gita. Our application is designed to help users understand the spiritual and practical aspects of the Bhagavad Gita teachings and apply them in their daily lives.</string>
    <string name="aboutus_2">Our team consists of experienced professionals with a passion for spreading the knowledge and wisdom of the Bhagavad Gita. We are committed to providing users with high-quality content that is authentic, accurate, and easy to understand.</string>
    <string name="aboutus_3">The Bhagavad Gita is a sacred Hindu scripture that has been passed down through generations for thousands of years. It contains teachings on various aspects of life, including spirituality, ethics, and morality. Our mission is to make these teachings accessible to people all over the world and help them lead a more fulfilling and peaceful life.</string>
    <string name="aboutus_4">We believe in the values of integrity, authenticity, and compassion. Our goal is to create a positive impact on society by promoting the teachings of the Bhagavad Gita and helping people live a life of purpose and meaning.</string>
    <string name="aboutus_5">Thank you for choosing our Vision Of Man application. We hope that you find it helpful in your spiritual journey. If you have any questions or feedback, please feel free to contact us.</string>
    <string name="contactus_1">If you have any questions, feedback, or concerns, please don\'t hesitate to contact us. We are always here to help you.</string>
    <string name="contactus_2">Email: krishnadevotees18700@gmail.com</string>
    <string name="contactus_3">You can also connect with us on social media:</string>
    <string name="contactus_4">Instagram: @bhagavadgita_app</string>
    <string name="contactus_5">Thank you for using our Vision Of Man application. We appreciate your support and look forward to hearing from you.</string>
    <string name="copy_email_button_text">copy</string>
    <string name="copybtn">copybtn</string>
    <string name="dark_mode_switch_title">Dark Mode</string>


</resources>