<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons_home"
            android:enabled="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chapters"
            android:icon="@drawable/icons8_ibooks"
            android:title="@string/menu_chapter" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icons8_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/fav_Fragment"
            android:icon="@drawable/baseline_favorite__fill_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/verseOfTheDayFragment"
            android:icon="@drawable/icons8_medal"
            android:title="@string/verse_of_the_day" />
        <item android:title="@string/tell_your_friends">
            <menu>
                <item android:title="@string/share"
                    android:id="@+id/nav_share"
                    android:onClick="drawer_share"
                    android:icon="@drawable/baseline_share_24"/>
                <item
                    android:id="@+id/contectUs"
                    android:onClick="drawer_contectUs"
                    android:icon="@drawable/contact_us"
                    android:title="@string/contact_us" />
                <item
                    android:id="@+id/aboutUS"
                    android:icon="@drawable/aboutus"
                    android:onClick="drawer_aboutUs"
                    android:title="@string/about_us" />
                <item
                    android:id="@+id/darkModeSwitch"
                    app:actionLayout="@layout/drawer_dark_mode_switch"
                    android:icon="@drawable/icons8moon"
                    android:title="Dark Mode" />



            </menu>

        </item>

    </group>


</menu>