<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.visonofman.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chapters"
        android:name="com.example.visonofman.ui.chapters.ChaptersFragment"
        android:label="@string/menu_chapter"
        tools:layout="@layout/fragment_chapters" >
        <action
            android:id="@+id/action_nav_gallery_to_secondFragment2"
            app:destination="@id/secondFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_language"
        android:name="com.example.visonofman.ui.language.LanguageFragment"
        android:label="@string/menu_languages"
        tools:layout="@layout/fragment_language" />
    <fragment
        android:id="@+id/secondFragment2"
        android:name="com.example.visonofman.CustomClasses.SecondFragment"
        android:label="fragment_second"
        tools:layout="@layout/fragment_second" />
    <fragment
        android:id="@+id/verseListFragment"
        android:name="com.example.visonofman.VerseListFragment"
        android:label="@string/title_verse"
        tools:layout="@layout/fragment_verse_list" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.visonofman.Activity.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <activity
        android:id="@+id/verseActivity"
        android:name="com.example.visonofman.Activity.VerseActivity"
        android:label="activity_verse"
        tools:layout="@layout/activity_verse" />
    <activity
        android:id="@+id/homeActivity"
        android:name="com.example.visonofman.Activity.HomeActivity"
        android:label="@string/title_vom"
        tools:layout="@layout/app_bar_home2" />
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.visonofman.SignupFragment"
        android:label="fragment_signup"
        tools:layout="@layout/fragment_signup" >
        <action
            android:id="@+id/action_signupFragment_to_signinFragment"
            app:destination="@id/signinFragment" />
    </fragment>
    <fragment
        android:id="@+id/signinFragment"
        android:name="com.example.visonofman.SigninFragment"
        android:label="fragment_signin"
        tools:layout="@layout/fragment_signin" >
        <action
            android:id="@+id/action_signinFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
    </fragment>
</navigation>